--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 <html>
   <head>
     <title>My Portfolio!</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
 
-    <h1>Mohamed`s Portfolio</h1>
+    <h1>Mohamed Mohamed`s Portfolio</h1>
     <h3>Written with a little guidance from <em>Moringa school<em></h3>
 
     <p>Hello, world!</p>
-    <p>Welcome to my <strong>Portfolio!</strong></p>
-    <p>Here are some things about me</p>
+    <div class="important">
+      <p>Welcome to my <strong>Portfolio!</strong></p>
+      <p>Here are some things about me</p>
     <ol>
       <li>HTML</li>
       <li>CSS</li>
       <li>Javascript</li>
       <li> And a lot more!</li>
     </ol>
+  </div>
   </body>
   <p>Check out <a href="http://moringaschool.com/">Moringa School</a>.
     It's a great place to learn web development skills!</p>
