--- a/index.html
+++ b/index.html
@@ -1,28 +1,108 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Portfolio!</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
+<head>
+  <title>My Portfolio!</title>
+  <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+</head>
 
-    <h1>Mohamed Mohamed`s Portfolio</h1>
-    <h3>Written with a little guidance from <em>Moringa school<em></h3>
 
-    <p>Hello, world!</p>
-    <div class="important">
-      <p>Welcome to my <strong>Portfolio!</strong></p>
-      <p>Here are some things about me</p>
-    <ol>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Javascript</li>
-      <li> And a lot more!</li>
-    </ol>
-  </div>
-  </body>
-  <p>Check out <a href="http://moringaschool.com/">Moringa School</a>.
-    It's a great place to learn web development skills!</p>
-  <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
-  <img src="images/Lion.jpg" alt="A photo of Lion">
-</html>
+<header class="s-header">
+
+    <div class="header-logo">
+        <a class="site-logo" href="index.html">
+            <img src="images/logo2.png" alt="Homepage">
+        </a>
+    </div>
+
+    <nav class="header-nav">
+
+        <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
+
+        <div class="header-nav__content">
+            <h3>Navigation</h3>
+
+            <ul class="header-nav__list">
+                <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
+                <li><a class="smoothscroll"  href="#services" title="services">Services</a></li>
+                <li><a class="smoothscroll"  href="#portfolio" title="portfolio">Portfolio</a></li>
+                <li><a class="smoothscroll"  href="#clients" title="clients">Clients</a></li>
+                  <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
+                <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
+            </ul>
+
+            <ul class="header-nav__social">
+                <li>
+                    <a href="https://www.facebook.com/regalstudioske/" target="_blank"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/regalstudioske" target="_blank"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/regalstudioske/" target="_blank"><i class="fa fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/company/regalstudioske/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UC8ezbPZyUioH7Ms-edtLXrA" target="_blank"><i class="fa fa-youtube"></i></a>
+                </li>
+            </ul>
+
+        </div> <!-- end header-nav__content -->
+
+    </nav>  <!-- end header-nav -->
+
+    <a class="header-menu-toggle" href="#0">
+        <span class="header-menu-text">Menu</span>
+        <span class="header-menu-icon"></span>
+    </a>
+
+</header>
+
+
+
+<body>
+ background-image: url('images/background.png');"
+
+  <h1>My Portfolio</h1>
+
+
+  <p>Hello, world!</p>
+
+  <div class="my-container">
+    <h1>Scotch Scotch Scotch</h1>
+    <img src="images/background.img">
+</div>
+
+  <div class="test-box">
+    <p>Welcome to my <strong>Portfolio!</strong></p>
+    <p>My name is <b>Mohamed<sup>2</sup></b>. You can call me <strong><em>Moha<sup>&reg;</sup></em></strong>. I am a mechanical Engineer by proffesion.
+      I want to learn software development and be proficient at it as my field is evolving. I want to grow into the robotics field. </p>
+      <img src="images/Lion.jpg" alt="A photo of Lion" width='400px' />
+      <p> ^This is me back in the day when i was young </p>
+      <div class="column">
+        <p>Here are some things about me</p>
+        <ol>
+          <li>I travel around alot</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+          <li> And a lot more!</li>
+        </ol>
+      </div>
+      <p>Here are some of the projects i have done</p>
+      <ol>
+        <li><a href="favorite-things.html">My Favorite things</a></li>
+        <li><a href=" ">CSS</li>
+          <li><a href=" ">Javascript</li>
+            <li><a href=" " >And a lot more!</li>
+            </ol>
+            <Contacts>
+    Phone Number +254714347036<br>
+    email: demhaom93@gmail.com<br>
+        </address>
+            <h2>Created with a little guidance from <em>Moringa school</em></h2>
+            </body>
+
+            </html>
