Added style to css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
-
 <body>
 
   <h1>My Portfolio</h1>
@@ -14,34 +13,42 @@
 
   <p>Hello, world!</p>
 
-  <div class="test-box">
+  <div id="test-box">
+    <div class="paragraph1">
     <p>Welcome to my <strong>Portfolio!</strong></p>
-    <p>My name is <b>Mohamed<sup>2</sup></b>. You can call me <strong><em>Moha<sup>&reg;</sup></em></strong>. I am a mechanical Engineer
+    <div id="paragraph1">
+    <p style="background-color:#ff6347;";> My name is <b>Mohamed<sup>2</sup></b>. You can call me <strong><em>Moha<sup>&reg;</sup></em></strong>. I am a mechanical Engineer
       by proffesion.I want to learn software development and be proficient at it as my field is
       evolving. I want to grow into the robotics field. My birthday is in July.  </p>
       <img src="images/Lion.jpg" alt="A photo of Lion" width='400px' />
       <p> ^This is me back in the day when i was young </p>
+    </div>
+    </div>
       <div class="column">
         <p>Here are some things about me</p>
-        <ol>
+        <ol  style="border: 3px solid MediumSeaGreen";>
           <li>I travel around alot</li>
           <li>CSS</li>
           <li>Javascript</li>
           <li> And a lot more!</li>
         </ol>
       </div>
+  </div>
       <p>Here are some of the projects i have done</p>
-      <ol>
+      <ol style="border: 3px solid MediumSeaGreen";>
         <li><a href="favorite-things.html">My Favorite things</a></li>
         <li><a href=" ">CSS</li>
           <li><a href=" ">Javascript</li>
             <li><a href=" " >And a lot more!</li>
             </ol>
-            <Contacts>
+          <div class=" Contacts">
+            <Contacts style="border: 3px solid MediumSeaGreen";>
               Phone Number +254714347036<br>
               email: demhaom93@gmail.com<br>
             </address>
-            <h2>Created with a little guidance from <em>Moringa school</em></h2>
-          </body>
+          </div>
+            <p>Created with a little guidance from Moringa school</p>
+  </body>
+
 
           </html>
