finalization of project

--- a/index.html
+++ b/index.html
@@ -7,47 +7,33 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-
-  <h1>My Portfolio</h1>
-
-
-  <p>Hello, world!</p>
-
-  <div id="test-box">
     <div class="paragraph1">
     <p>Welcome to my <strong>Portfolio!</strong></p>
-    <div id="paragraph1">
-    <p style="background-color:#ff6347;";> My name is <b>Mohamed<sup>2</sup></b>. You can call me <strong><em>Moha<sup>&reg;</sup></em></strong>. I am a mechanical Engineer
+      <div class = "test-box">
+      <p> My name is <b>Mohamed<sup>2</sup></b>. You can call me <strong><em>Moha<sup>&reg;</sup></em></strong>. I am a mechanical Engineer
       by proffesion.I want to learn software development and be proficient at it as my field is
       evolving. I want to grow into the robotics field. My birthday is in July.  </p>
-      <img src="images/Lion.jpg" alt="A photo of Lion" width='400px' />
+
+    </div>
+      <img src="images/aenshtyn.jpg" alt="A photo of Myself" width='400px'justify />
       <p> ^This is me back in the day when i was young </p>
-    </div>
-    </div>
-      <div class="column">
-        <p>Here are some things about me</p>
-        <ol  style="border: 3px solid MediumSeaGreen";>
+        <h2>Here are some things about me</h2>
           <li>I travel around alot</li>
-          <li>CSS</li>
-          <li>Javascript</li>
+          <li>I am a farmer</li>
           <li> And a lot more!</li>
         </ol>
-      </div>
-  </div>
-      <p>Here are some of the projects i have done</p>
-      <ol style="border: 3px solid MediumSeaGreen";>
-        <li><a href="favorite-things.html">My Favorite things</a></li>
-        <li><a href=" ">CSS</li>
+      <h2>Here are some of the projects i have done</h2>
+        <li><a href="my-first-website/my-favorite-things.html">My Favorite things</a></li>
+        <li><a href=" "></li>
           <li><a href=" ">Javascript</li>
             <li><a href=" " >And a lot more!</li>
-            </ol>
-          <div class=" Contacts">
+          </ol>
             <Contacts style="border: 3px solid MediumSeaGreen";>
               Phone Number +254714347036<br>
               email: demhaom93@gmail.com<br>
             </address>
-          </div>
-            <p>Created with a little guidance from Moringa school</p>
+      </div>
+                      <p>Created with a little guidance from Moringa school</p>
   </body>
 
 
