Final commit for ptoject

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       evolving. I want to grow into the robotics field. My birthday is in July.  </p>
 
     </div>
+  </div>
       <img src="images/aenshtyn.jpg" alt="A photo of Myself" width='400px'justify />
       <p> ^This is me back in the day when i was young </p>
         <h2>Here are some things about me</h2>
@@ -22,11 +23,13 @@
           <li>I am a farmer</li>
           <li> And a lot more!</li>
         </ol>
+        <div class="paragraph2">
       <h2>Here are some of the projects i have done</h2>
         <li><a href="my-first-website/my-favorite-things.html">My Favorite things</a></li>
-        <li><a href=" "></li>
-          <li><a href=" ">Javascript</li>
-            <li><a href=" " >And a lot more!</li>
+        <li><a href="https://aenshtyn.github.io/My-First-Website/">My First Website"/</li>
+
+            </div>
+
           </ol>
             <Contacts style="border: 3px solid MediumSeaGreen";>
               Phone Number +254714347036<br>
