--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
   <title>My Portfolio!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-    <div class="paragraph1">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="jumbotron">
     <p>Welcome to my <strong>Portfolio!</strong></p>
-      <div class = "test-box">
+
       <p> My name is <b>Mohamed<sup>2</sup></b>. You can call me <strong><em>Moha<sup>&reg;</sup></em></strong>. I am a mechanical Engineer
       by proffesion.I want to learn software development and be proficient at it as my field is
       evolving. I want to grow into the robotics field. My birthday is in July.  </p>
@@ -36,6 +40,7 @@
               email: demhaom93@gmail.com<br>
             </address>
       </div>
+    </div>
                       <p>Created with a little guidance from Moringa school</p>
   </body>
 
